# obsidian-ecosystem

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.claude/: launch.json
agents/python/memory-keeper/: pyproject.toml
agents/python/memory-keeper/src/memory_keeper/: __init__.py  __main__.py  agent.py  ledger_archival.py
agents/python/memory-keeper/tests/: test_archive_excludes_secrets.py  test_entrypoint_wires.py  test_ledger_archival.py
agents/python/momentum-signal/: pyproject.toml
agents/python/momentum-signal/src/momentum_signal/: __init__.py  agent.py  sma.py
agents/python/momentum-signal/tests/: test_sma.py
agents/python/paper-executor/: pyproject.toml
agents/python/paper-executor/src/paper_executor/: __init__.py  agent.py  alpaca_client.py
agents/python/paper-executor/tests/: test_alpaca_guard.py
agents/python/signal-blender/: pyproject.toml
agents/python/signal-blender/src/signal_blender/: __init__.py  agent.py
agents/rust/collector-equities-csv/: Cargo.toml
agents/rust/collector-equities-csv/src/: csv_replayer.rs  main.rs  normalizer.rs
agents/rust/risk-overlord/: Cargo.toml
agents/rust/risk-overlord/src/: circuit_breaker.rs  exposure.rs  limits.rs  main.rs
agents/rust/risk-overlord/tests/: latency_budget.rs
cities/aletheia/: aletheia-core-entrypoint.sh  aletheia-core.Dockerfile  aletheia-logic-entrypoint.py  aletheia-logic.Dockerfile
command-center/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
core/obsidian-agent-py/: README.md  pyproject.toml
core/obsidian-agent-py/obsidian_agent/: __init__.py  agent.py  context.py  heartbeat.py  lifecycle.py  metadata.py  supervisor.py
core/obsidian-agent-py/obsidian_agent/_proto/: __init__.py
core/obsidian-agent-py/obsidian_agent/bus/: __init__.py  canonical.py  envelope.py  nats.py  signing.py
core/obsidian-agent-py/tests/: conftest.py  test_bus_cross_language.py  test_canonical.py  test_lifecycle.py  test_signing.py  test_supervisor_logic.py
core/obsidian-agent-rs/: Cargo.toml
core/obsidian-agent-rs/src/: agent.rs  context.rs  error.rs  heartbeat.rs  lib.rs  lifecycle.rs  metadata.rs  supervisor.rs
core/obsidian-agent-rs/tests/: lifecycle_transitions.rs
core/obsidian-bus/: Cargo.toml  build.rs
core/obsidian-bus/benches/: canonical.rs
core/obsidian-bus/examples/: canonical_helper.rs  emit_vectors.rs
core/obsidian-bus/src/: canonical.rs  envelope.rs  error.rs  lib.rs  nats.rs  prices.rs  signing.rs
core/obsidian-bus/test-vectors/: README.md  envelopes.json
core/obsidian-bus/tests/: canonical_determinism.rs  canonical_vectors.rs  cross_language.rs  sign_verify.rs
core/obsidian-graph/: pyproject.toml
core/obsidian-graph/obsidian_graph/: __init__.py  blob.py  graph.py  schemas.py  vector.py
core/obsidian-graph/tests/: test_smoke.py
core/obsidian-ledger/: Cargo.toml
core/obsidian-ledger/benches/: append.rs
core/obsidian-ledger/src/: entry.rs  error.rs  hash_chain.rs  ledger.rs  lib.rs  replay.rs  verify.rs
core/obsidian-ledger/tests/: append_and_replay.rs  chain_integrity.rs  concurrent_append.rs  deterministic_entry_id.rs
core/tape-recorder/: Cargo.toml  Dockerfile
core/tape-recorder/src/: clickhouse_writer.rs  main.rs  subscriber.rs
core/time-oracle/: Cargo.toml  Dockerfile
core/time-oracle/src/: hlc.rs  main.rs
docs/: COMMAND_CENTER.md  WHITEPAPER.md
docs/acceptance/: TEST_SUITE.md
docs/advancements/: tier-big.md  tier-layers.md  tier-medium.md  tier-mega.md  tier-small.md  tier-tiny.md
docs/agents/: DIRECTORY.md
docs/cities/: 01-aletheia.md  02-mnemosyne.md  03-prometheus.md  04-hephaestus.md  05-themis.md  06-agora.md  07-iris.md  08-chronos.md  09-narcissus.md  10-eris.md  11-janus.md
docs/decisions/: 0001-language-set.md  0002-container-granularity.md  0003-ledger-hash-chain.md  0004-topic-naming.md
docs/gaps/: FORTY_TWO_CATEGORIES.md
docs/layers/: L10-temporal-cascade.md  L11-noosphere.md  L12-polymath-protocol.md  L13-legacy-forge.md  L15-eschaton.md  L16-universal-curriculum.md  L18-dream-collective.md  L19-market-within.md  L20-genesis-protocol.md  L21-omega-point.md  L22-owner-agent-singularity.md  L23-internal-economy.md  L24-exo-cortex.md  L25-philosophical-engine.md  L26-chimera-forge.md  L27-inverse-civilization.md  L28-memetic-immune-system.md  L29-adaptive-owner-interface.md  L30-federation-protocol.md  L31-temporal-seal.md  L32-idea-genealogy.md  L33-ritual-engine.md  L34-dark-forest.md  L35-immortality-vault.md  L36-latency-pain-agent.md  L37-market-dreamtime.md  L38-paradox-integration.md  L39-owners-hidden-hand.md  L40-metacognitive-hierarchy.md  L41-dream-of-the-system.md  L42-xenopsychology.md  L43-aesthetic-engine.md  L44-moral-horizon-detector.md  L45-strategy-babel.md  L46-entropy-engine.md  L47-motherseed.md  L48-last-question.md  L49-silent-vault.md
docs/memory/: FABRIC.md
docs/milestones/: M0-walking-skeleton.md  M1-memory-fabric.md
docs/risk/: FRAMEWORK.md
docs/schemas/: MESSAGE_SCHEMAS.md
docs/ui/: CINEMATIC_SPEC.md
docs/whitepaper/: 01-philosophy.md  02-architecture.md  03-cities.md  04-hierarchy.md  05-memory.md  06-bus.md  07-agent-runtime.md  08-agent-directory.md  09-advancements.md  10-layers.md  11-ui.md  12-schemas.md  13-risk.md  14-roadmap.md  15-stack.md  16-repo.md  17-acceptance.md  18-gating.md  19-gaps.md  20-glossary.md  21-appendices.md
infrastructure/nats/: nats-server.conf
proto/: envelope.proto  heartbeat.proto  market_data.proto  order.proto  risk.proto  signal.proto
scripts/: bootstrap.sh  replay-day.py  seed-csv.py  tamper-ledger.py
tests/: conftest.py
tests/chaos/: test_agent_kill_recovery.py
tests/fixtures/: aapl_2023-03-13_1min.csv
tests/integration/: test_end_to_end_trade.py  test_heartbeat_ring.py  test_ledger_immutability.py  test_replay_determinism.py  test_risk_latency.py
visualization/: Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
visualization/src/: App.svelte  main.ts
(+86 files in other folders)
