# ============================================================================
# Cargo.toml — workspace root
#
# Authorized by: spec Part 2 (Repository Structure) and M0 plan §"Build order".
#
# All Rust crates in the ecosystem share a single workspace so that:
#   - `cargo build --workspace` builds the whole Rust surface in one go,
#   - shared deps (tokio, async-nats, prost, sha3, ed25519-dalek) live in
#     `[workspace.dependencies]` and each member inherits a single pinned
#     version,
#   - CI runs the full test suite with a single `cargo test --workspace`.
# ============================================================================

[workspace]
resolver = "2"
members = [
    "core/obsidian-bus",
    "core/obsidian-agent-rs",
    "core/obsidian-ledger",
    "core/tape-recorder",
    "core/time-oracle",
    "agents/rust/collector-equities-csv",
    "agents/rust/risk-overlord",
]
exclude = []

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0 OR MIT"
authors = ["Obsidian Ecosystem"]
repository = "https://github.com/aldhaheri182/obsidian-ecosystem"

[workspace.dependencies]
# --- runtime ---
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# --- bus ---
async-nats = "0.36"

# --- protobuf / cbor ---
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"

# --- crypto ---
sha3 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = "0.6"

# --- storage ---
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# --- identifiers / time ---
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- errors ---
thiserror = "1"
anyhow = "1"

# --- clickhouse (tape) ---
clickhouse = "0.13"

# --- redis (risk overlord) ---
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# --- csv (collector) ---
csv = "1.3"

# --- http (alpaca, health) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- grpc (tape replay) ---
tonic = "0.12"
tonic-build = "0.12"

# --- bytes ---
bytes = "1.8"

# --- dev ---
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.13"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = 1

[profile.bench]
lto = "thin"
debug = 1
