# ============================================================================
# core/obsidian-bus/Cargo.toml
#
# Authorized by: M0 plan §"Build order" step 2.
#
# This crate is the single source of envelope serialization, signing, and
# NATS I/O for every Rust agent in the Ecosystem. No agent may roll its own
# signing. No agent may serialize an envelope outside this crate's API.
# ============================================================================

[package]
name = "obsidian-bus"
version = "0.1.0"
description = "Envelope (de)serialization, canonical signing, and NATS wiring for the Obsidian Ecosystem."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
hex = "0.4"
criterion = { workspace = true }

[[example]]
name = "emit-vectors"
path = "examples/emit_vectors.rs"

[[example]]
name = "canonical-helper"
path = "examples/canonical_helper.rs"

[[bench]]
name = "canonical"
harness = false
