# ============================================================================
# core/obsidian-ledger/Cargo.toml
# Authorized by: M0 plan §"Build order" step 5; ADR 0003.
# ============================================================================

[package]
name = "obsidian-ledger"
version = "0.1.0"
description = "Immutable, cryptographically hash-chained, Ed25519-signed event ledger backed by RocksDB."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
obsidian-bus = { path = "../obsidian-bus" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde_cbor = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
rocksdb = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "append"
harness = false
