[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-signal-blender"
version = "0.1.0"
description = "M0 passthrough signal blender. Real blending in M2."
requires-python = ">=3.12"
dependencies = ["obsidian-agent"]

[tool.setuptools.packages.find]
where = ["src"]
