[package]
name = "risk-overlord"
version = "0.1.0"
description = "Aletheia Risk Bunker's circuit-breaker agent. p99 breach-to-override < 100 ms."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "risk-overlord"
path = "src/main.rs"

[dependencies]
obsidian-bus = { path = "../../../core/obsidian-bus" }
obsidian-agent-rs = { path = "../../../core/obsidian-agent-rs" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
